--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,8 @@
 buildscript {
     ext {
         springBootVersion = '1.3.1.RELEASE'
+        rxjava_ver = '1.1.1'
+        rxandroid_ver = '1.1.0'
     }
     repositories {
         mavenCentral()
@@ -27,6 +29,8 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-jdbc')
     compile('org.springframework.boot:spring-boot-starter-web')
     compile 'com.google.guava:guava:19.0'
+    compile "io.reactivex:rxjava:$rxjava_ver"
+    compile "io.reactivex:rxandroid:$rxandroid_ver"
 
     testCompile('de.bechte.junit:junit-hierarchicalcontextrunner:4.12.1')
     testCompile('org.springframework.boot:spring-boot-starter-test')
