--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 buildscript {
     ext {
-        springBootVersion = '1.3.1.RELEASE'
+//        springBootVersion = '1.3.1.RELEASE'
+        springBootVersion = '1.4.0.RELEASE'
         rxjava_ver = '1.1.1'
         rxandroid_ver = '1.1.0'
     }
