--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
     ext {
 //        springBootVersion = '1.3.1.RELEASE'
-        springBootVersion = '1.4.0.RELEASE'
+        springBootVersion = '1.4.3.RELEASE'
         rxjava_ver = '1.1.1'
         rxandroid_ver = '1.1.0'
         reactivestreams_ver='1.0.0'
@@ -34,6 +34,7 @@ dependencies {
     compile "io.reactivex:rxjava:$rxjava_ver"
     compile "io.reactivex:rxandroid:$rxandroid_ver"
     compile "org.reactivestreams:reactive-streams:$reactivestreams_ver"
+    compile "org.projectlombok:lombok:1.16.10"
 
     testCompile('de.bechte.junit:junit-hierarchicalcontextrunner:4.12.1')
     testCompile('org.springframework.boot:spring-boot-starter-test')
