add Flux Example

--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
         rxjava_ver = '1.1.1'
         rxandroid_ver = '1.1.0'
         reactivestreams_ver='1.0.0'
+        projectreactor_ver='3.0.4.RELEASE'
     }
     repositories {
         mavenCentral()
@@ -34,6 +35,7 @@ dependencies {
     compile "io.reactivex:rxjava:$rxjava_ver"
     compile "io.reactivex:rxandroid:$rxandroid_ver"
     compile "org.reactivestreams:reactive-streams:$reactivestreams_ver"
+    compile "io.projectreactor:reactor-core:$projectreactor_ver"
     compile "org.projectlombok:lombok:1.16.10"
 
     testCompile('de.bechte.junit:junit-hierarchicalcontextrunner:4.12.1')
