--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
     ext {
-//        springBootVersion = '1.3.1.RELEASE'
-        springBootVersion = '1.4.3.RELEASE'
+//        springBootVersion = '1.4.3.RELEASE'
+        springBootVersion = '2.0.0.BUILD-SNAPSHOT'
         rxjava_ver = '1.1.1'
         rxandroid_ver = '1.1.0'
         reactivestreams_ver='1.0.0'
@@ -9,6 +9,8 @@ buildscript {
     }
     repositories {
         mavenCentral()
+        maven { url "https://repo.spring.io/snapshot" }
+        maven { url "https://repo.spring.io/milestone" }
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
@@ -17,7 +19,7 @@ buildscript {
 
 apply plugin: 'java'
 apply plugin: 'idea'
-apply plugin: 'spring-boot'
+apply plugin: 'org.springframework.boot'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
@@ -26,10 +28,13 @@ version = '1.0'
 
 repositories {
     mavenCentral()
+    maven { url "https://repo.spring.io/snapshot" }
+    maven { url "https://repo.spring.io/milestone" }
 }
 
 dependencies {
-    compile('org.springframework.boot:spring-boot-starter-jdbc')
+    compile('org.springframework.boot:spring-boot-starter-jpa')
+    compile('org.springframework.boot.experimental:spring-boot-starter-web-reactive')
     compile('org.springframework.boot:spring-boot-starter-web')
     compile 'com.google.guava:guava:19.0'
     compile "io.reactivex:rxjava:$rxjava_ver"
