--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,5 @@
 buildscript {
     ext {
-//        springBootVersion = '1.4.3.RELEASE'
         springBootVersion = '2.0.0.BUILD-SNAPSHOT'
         rxjava_ver = '1.1.1'
         rxandroid_ver = '1.1.0'
@@ -42,6 +41,7 @@ dependencies {
     compile "org.reactivestreams:reactive-streams:$reactivestreams_ver"
     compile "io.projectreactor:reactor-core:$projectreactor_ver"
     compile "org.projectlombok:lombok:1.16.10"
+    compile "io.netty:netty-all:4.1.7.Final"
 
     testCompile('de.bechte.junit:junit-hierarchicalcontextrunner:4.12.1')
     testCompile('org.springframework.boot:spring-boot-starter-test')
