--- a/build.gradle
+++ b/build.gradle
@@ -49,4 +49,9 @@ dependencies {
     testCompile('de.bechte.junit:junit-hierarchicalcontextrunner:4.12.1')
     testCompile('org.springframework.boot:spring-boot-starter-test')
     testCompile group: 'junit', name: 'junit', version: '4.11'
+    testCompile 'com.github.tomakehurst:wiremock:2.4.1'
+    testCompile 'io.rest-assured:rest-assured:3.0.1'
+    testCompile 'io.rest-assured:json-schema-validator:3.0.1'
+    testCompile 'com.github.fge:json-schema-validator:2.2.6'
+    testCompile 'com.github.fge:json-schema-core:1.2.5'
 }
