--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,8 @@ dependencies {
     compile "org.projectlombok:lombok:1.16.10"
     compile "io.netty:netty-all:4.1.7.Final"
     compile 'commons-codec:commons-codec:1.10'
+    compile 'org.apache.kafka:kafka-streams:1.0.0'
+    compile 'org.apache.kafka:kafka-clients:1.0.0'
 
     testCompile('de.bechte.junit:junit-hierarchicalcontextrunner:4.12.1')
     testCompile('org.springframework.boot:spring-boot-starter-test')
