--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
         rxandroid_ver = '1.1.0'
         reactivestreams_ver='1.0.0'
         projectreactor_ver='3.0.7.RELEASE'
-        kotlin_version = '1.2.0'
+        kotlin_version = '1.2.30'
     }
     repositories {
         mavenCentral()
@@ -38,7 +38,7 @@ repositories {
 }
 
 dependencies {
-    compile("org.jetbrains.kotlin:kotlin-stdlib:${kotlin_version}")
+    testCompile("org.jetbrains.kotlin:kotlin-stdlib:${kotlin_version}")
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
     compile('org.springframework.boot:spring-boot-starter-webflux')
     compile('org.springframework.boot:spring-boot-starter-web')
@@ -63,6 +63,6 @@ dependencies {
     testCompile 'com.github.fge:json-schema-validator:2.2.6'
     testCompile 'com.github.fge:json-schema-core:1.2.5'
     testCompile "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
-    testCompile "org.jetbrains.spek:spek-api:1.1.5"
+//    testCompile "org.jetbrains.spek:spek-api:1.1.5"
     testCompile "org.junit.jupiter:junit-jupiter-api:5.0.1"
 }
