--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
         reactivestreams_ver='1.0.0'
         projectreactor_ver='3.0.7.RELEASE'
         kotlin_version = '1.2.30'
+        junit5_version = '5.2.0'
     }
     repositories {
         mavenCentral()
@@ -65,5 +66,6 @@ dependencies {
     testCompile 'com.github.fge:json-schema-core:1.2.5'
     testCompile "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
 //    testCompile "org.jetbrains.spek:spek-api:1.1.5"
-    testCompile "org.junit.jupiter:junit-jupiter-api:5.0.1"
+    testCompile "org.junit.jupiter:junit-jupiter-api:${junit5_version}"
+    testCompile "org.junit.jupiter:junit-jupiter-params:${junit5_version}"
 }
