add Cucumber Sample
https://medium.com/@mlvandijk/getting-started-with-cucumber-in-java-a-10-minute-tutorial-586652d2c82

--- a/build.gradle
+++ b/build.gradle
@@ -68,4 +68,6 @@ dependencies {
 //    testCompile "org.jetbrains.spek:spek-api:1.1.5"
     testCompile "org.junit.jupiter:junit-jupiter-api:${junit5_version}"
     testCompile "org.junit.jupiter:junit-jupiter-params:${junit5_version}"
+    testCompile "io.cucumber:cucumber-java:3.0.2"
+    testCompile "io.cucumber:cucumber-junit:3.0.2"
 }
