--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 server.tomcat.max-threads=1
+
+spring.datasource.url=jdbc:h2:mem:testdb
+# spring.datasource.url=jdbc:h2:file:/data/demo
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+spring.h2.console.enabled=true # http://localhost:8080/h2-console
+
+# spring.h2.console.path=/h2c # http://localhost:8080/h2c
+# spring.h2.console.settings.trace=false # prevent trace output
+# spring.h2.console.settings.web-allow-others=false # disable remote access
