--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,6 @@ spring.h2.console.enabled=true # http://localhost:8080/h2-console
 # spring.h2.console.path=/h2c # http://localhost:8080/h2c
 # spring.h2.console.settings.trace=false # prevent trace output
 # spring.h2.console.settings.web-allow-others=false # disable remote access
+
+app.github.username=msbaek
+app.github.token=86db265701b5b17c9892943dd65fd48a31cb462c
