--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,8 @@ buildscript {
         rxandroid_ver = '1.1.0'
         reactivestreams_ver='1.0.0'
         projectreactor_ver='3.2.8.RELEASE'
-        kotlin_version = '1.2.30'
-        junit5_version = '5.2.0'
+        kotlin_version = '1.3.30'
+        junit5_version = '5.5.2'
     }
     repositories {
         mavenCentral()
@@ -71,7 +71,9 @@ dependencies {
     testCompile 'com.github.fge:json-schema-core:1.2.5'
     testCompile "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
 //    testCompile "org.jetbrains.spek:spek-api:1.1.5"
+    testCompile "org.junit.jupiter:junit-jupiter:${junit5_version}"
     testCompile "org.junit.jupiter:junit-jupiter-api:${junit5_version}"
+    testCompile "org.junit.jupiter:junit-jupiter-engine:${junit5_version}"
     testCompile "org.junit.jupiter:junit-jupiter-params:${junit5_version}"
     testCompile "io.cucumber:cucumber-java:3.0.2"
     testCompile "io.cucumber:cucumber-junit:3.0.2"
